<resources>
    <string name="app_name">BookClient</string>
    <string name="form_title">Title</string>
    <string name="form_author">Author</string>
    <string name="form_numberOfPages">Number of pages</string>
    <string name="form_rating">Rating form 1 to 10</string>
    <string name="save_book">Save</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="number_of_pages">Number of pages</string>
    <string name="rating">Rating form 1 to 10</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="form_username">Username</string>
    <string name="form_password">Password</string>
    <string name="form_email">Email</string>
    <string name="form_register">Register</string>
    <string name="form_login">Login</string>
</resources>