<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textFieldTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:hint="@string/form_title" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textFieldAuthor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:hint="@string/form_author" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textFieldPages"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:hint="@string/form_numberOfPages" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textFieldRating"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:hint="@string/form_rating" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/form_buttonSave"
        android:text="@string/save_book"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</RelativeLayout>