<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firebase.RegisterFirebase">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">



        <EditText
            android:id="@+id/emailRegisterFirebase"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:hint="@string/form_email" />

        <EditText
            android:id="@+id/passwordRegisterFirebase"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:hint="@string/form_password" />

        <Button
            android:id="@+id/registerButtonRegisterFirebase"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/form_register" />

        <Button
            android:id="@+id/loginButtonRegisterFirebase"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/form_login" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>