<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firebase.LoginFirebase">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/emailLoginFirebase"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:hint="@string/form_email" />

        <EditText
            android:id="@+id/passwordLoginFirebase"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:hint="@string/form_password" />

        <Button
            android:id="@+id/loginButtonLoginFirebase"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/form_login"/>

        <Button
            android:id="@+id/registerButtonLoginFirebase"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:hint="@string/form_register"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>