<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="2dp"
    app:cardElevation="1dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:id="@+id/card_item">

    <RelativeLayout
        android:id="@+id/line"
        android:layout_width="10dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#49000000"/>

    <RelativeLayout
        android:padding="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/bookListItem_title"
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="1dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/bookListItem_author"
            android:text="@string/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/bookListItem_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:paddingBottom="20dp"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/bookListItem_numberOfPages"
            android:text="@string/number_of_pages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="200dp"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/bookListItem_rating"
            android:text="@string/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/bookListItem_numberOfPages"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textColor="@color/black"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>